# claude-super-agents

./: .gitignore  .mcp.json  AUTONOMOUS_INTEGRATION_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  KM_MCP_SETUP.md  KM_MCP_SIMPLE.md  MCP_INTEGRATION_FIX.md  NATURAL_LANGUAGE_TRIGGERS.md  PRD_CONSTITUTIONAL_INTEGRATION_ROADMAP.md  README.md  TROUBLESHOOTING.md  UPGRADE-STATUS.md  check_km_status.py  clean_test.py  install-global.sh  install.sh  km_bridge_wrapper.sh  km_project_manager.py  km_stdio_bridge.py  pyproject.toml  reinstall.sh  requirements-dev.txt  requirements-upgrade.txt  setup.cfg  setup.py  setup.sh  setup_local_aet.sh  start.sh  stop.sh  super-agents  super-agents-local  test_e2e_integration.py  test_safety_net.py  test_schema.sql  uninstall.sh  update.sh
.claude/: km_mcp_bridge.py  mcp_config.json  settings.json
.claude/agents/: architect-agent.md  builder-agent.md  contract-guardian.md  data-migration-agent.md  database-agent.md  dependency-agent.md  developer-agent.md  devops-agent.md  filesystem-guardian-agent.md  frontend-agent.md  integration-tester-agent.md  integrator-agent.md  monitoring-agent.md  performance-optimizer-agent.md  pm-agent.md  reviewer-agent.md  security-agent.md  test-executor.md  verifier-agent.md
.claude/config/: model_config.json
.claude/hooks/: install-hooks.sh  post-commit  pre-commit
.claude/state/: coordination_state.json
.claude/system/: context7_integration.py  context_assembler.py  event_watchers.py  hallucination_guard.py  orchestrator.py  parallel_orchestrator.py  process_manager.py  test_suite.py  tracing_config.py
.claude/test_reports/: fullstack_test_report.json
.claude/triggers/: contract-guardian_trigger_1755217192.json  contract-guardian_trigger_1755221170.json  contract-guardian_trigger_1755221480.json  contract-guardian_trigger_1755221764.json  contract-guardian_trigger_1755364053.json  contract-guardian_trigger_1755364457.json  contract-guardian_trigger_1755402967.json  contract-guardian_trigger_1755418671.json  database-agent_trigger_1755221170.json  (+160 more)
docs/: AET-UPGRADE-COMPLETE.md  AGENT-UPGRADES.md  DIRECTORY-STRUCTURE.md  FULL_STACK_TRANSFORMATION_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  MCP_SETUP_GUIDE.md  OPERATIONAL_AGENTS_ROADMAP.md  OPTIMIZATIONS.md  week4_integration_test_report.md
examples/: demo_observability.py
scripts/: establish_baseline.py  simple_performance_test.py  stress_test_suite.py  validate_performance.py
test/: .mcp.json
test2/: km_server_wrapper.py
test_files/: Dockerfile  UserComponent.tsx  product-requirements.md  schema.sql
test_triggers/: auth.config.js  deploy.tf  requirements.md  schema.sql  test.tsx
tests/: test_database_maintenance.py  test_embeddings_degradation.py  test_performance_optimizations.py
(+242 files in other folders)
