[metadata]
name = super_agents
version = 1.0.0
author = AET Team
author_email = aet@example.com
description = Autonomous Engineering Team (AET) - A production-ready multi-agent orchestration system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/super-agents
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0,<9.0
    flask>=2.0,<4.0
    numpy>=1.20,<2.0
    colorama>=0.4,<1.0
    rich>=10.0,<14.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    super-agents = super_agents.cli:main

[options.package_data]
super_agents = 
    templates/**/*
    templates/**/.claude/**/*